se refactoriza el codigo para tener roles personalizados y se actualiza el README.md